[metadata]
name = lerg
version = 0.0.1
author = Yi-Lin Tuan
author_email = ytuan@cs.ucsb.edu
description = A unified approach to explain the output of any conditional text generation model.
long_description = LERG (Local Explanation of Response Generation) is a unified approach to explain the output of any conditional text generation model. LERG extends and unifies game theory based approach (Shapley value) and local explanations to consider the relationship among output time steps, thus being suitable for text generation.
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Pascalson/LERG
project_urls =
    Bug Tracker = https://github.com/Pascalson/LERG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    torch
    tqdm
    transformers

[options.packages.find]
where = .
